--- a/style.css
+++ b/style.css
@@ -7,6 +7,69 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%
 }
 
 /* Add styles here! */
+
+h1 {
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-size: 1.25rem;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+header {
+  height: 40%;
+  padding: 64px 0 24px 0;
+}
+
+main {
+  height: 60%;
+  border-top: 5px solid hsl(0deg, 0%, 40%);
+  background-color: hsl(0deg, 0%, 60%);
+  padding: 64px 0 40px 0;
+}
+
+.max-width-wrapper {
+  margin: 0 auto;
+  max-width: 570px;
+}
+
+header, main {
+  margin: 0 auto;
+}
+
+.card {
+  background: hsl(0, 0%, 100%);
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-bottom: 5px solid hsl(0deg, 0%, 40%);
+}
+
+.indented-heading {
+  margin-top: 0;
+  width: fit-content;
+  background-color: hsl(45deg, 100%, 50%);
+  padding: 16px 40px;
+  margin-left: -40px;
+  border-bottom: 5px solid hsl(45deg, 100%, 40%);
+}
+
+.intro-chunk {
+  max-width: 320px;
+}
+
+.title {
+  margin-bottom: 40px;
+}
+
+.intro-chunk, .card {
+  padding-left: 24px;
+  padding-right: 24px;
+}
